# dj_mailing

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_options_article_is_active.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py
config/: settings.py  urls.py
fixtures/: auth_data.json  blog_data.json  clients_data.json  group_data.json  jobs_data.json  mess_data.json  users_data.json
jobs/: admin.py  apps.py  forms.py  jobs.py  models.py  services.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_alter_mailing_status.py  0003_remove_mailing_recipients_mailing_recipients.py  0004_alter_mailing_message.py  0005_attempt_attempt_mailing_attempt_server_response.py  0006_alter_mailing_message.py  0007_mailing_is_active_mailing_owner.py  0008_alter_mailing_options_alter_mailing_is_active.py  0009_alter_mailing_frequency_alter_mailing_is_active.py
mess/: admin.py  forms.py  models.py  urls.py  views.py
mess/migrations/: 0001_initial.py  0002_alter_message_content.py  0003_alter_message_content.py  0004_message_owner.py
templates/: base.html
templates/blog/: article_detail.html  article_form.html  article_list.html
templates/clients/: client_confirm_delete.html  client_detail.html  client_list.html
templates/includes/: inc_main_menu.html
templates/jobs/: attempt_list.html  home.html  mailing_detail.html  (+3 more)
users/: forms.py  models.py  services.py  urls.py  views.py
(+13 files in other folders)
