[tool.poetry]
name = "dj-sched-p"
version = "0.1.0"
description = ""
authors = ["gennady <topchiev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.6.2"
translatepy = "^2.3"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.4.0"

[tool.black]
line-length = 120
extend-exclude = """
    (
    .*migrations/
    | .*tests/
    )
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
